# archive-monorepo-12025-10-grainkae3g

./: .gitattributes  .gitignore  .gitmodules  CHARTCOURSE-ROADMAP.md  COSMIC-GRAIN-NETWORK-FRACTAL.md  COSMIC-NETWORK-AETHER-DIELECTRIC-MODEL.md  ORGANIZATION-MIGRATION-PLAN.md  README-backup-12025-10-26-1900.md  README.md  STEEL-GRAINOS-WORLD-MAP.md  STEEL-MIGRATION-PROGRESS.md  STEEL-MIGRATION-TODO.md  TODO-grainscheme-module.md  grain-network-final-architecture.md  grain6pbc-repos-list.json  grainbranch.bb  grainos-kernel-concept.md  organization-migration-plan.md  session-810-complete.md  session-810-final-summary.md  steel-migration-progress.md
docs/: GITHUB-DEPLOYMENT-STATUS.md  GRAIN-MONOLITHIC-COMPAT-STRATEGY.md  NOVEMBER-12025-START.md  OPEN-SOURCE-NAMING-GUIDELINES.md  REDOX-AERO-COMPARISON.md  REDOX-SSH-SETUP.md  RUST-OS-LICENSE-COMPARISON.md  RUST-OS-OPTIONS.md  SESSION-GLOW-G2-COMPLETE.md  SESSION-URBIT-GRAIN06-COMPLETE.md  TEAMHELP11-KAE3G-SUGGESTIONS.md
graindaemon/: daemon.scm
grainstore/grain6pbc/teamprecision06/graindualwifi/: Cargo.toml  README.md  SPEC.md
grainstore/grain6pbc/teamprecision06/graindualwifi/config/: graindualwifi.edn
grainstore/grain6pbc/teamprecision06/graindualwifi/src/: graindualwifi.ket  main.rs
main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/urbit-icp-identity/canisters/urbit-chain-fusion/: Cargo.toml
main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/urbit-icp-identity/canisters/urbit-chain-fusion/src/: main.rs
main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/urbit-icp-identity/canisters/urbit-identity/: Cargo.toml
main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/main-branch/urbit-icp-identity/canisters/urbit-identity/src/: lib.rs  urbit_identity.did
(+3038 files in other folders)
