[package]
name = "urbit-chain-fusion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.0"
ic-cdk-macros = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
std = { version = "0.1.0", features = ["ic0"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
