[package]
name = "urbit-identity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
candid = "0.10.20"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
